# this-is-a-8573

./: .gitignore  README.md  craco.config.js  index.html  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.github/workflows/: deploy.yml  vercel-deploy.yml
docs/: anchor-program.md  api.md  verification-system.md  wallet-integration.md
public/: index.html  manifest.json
src/: App.jsx  index.css  index.js  main.jsx  polyfills.js
src/anchor/: Anchor.toml  Cargo.toml  lib.rs
src/api/: deploymentService.js  index.js  paymentService.js  pollService.js  verificationService.js
src/components/: CodeEditor.jsx  Dashboard.jsx  DeploymentFlow.jsx  Header.jsx  PaymentModal.jsx  PollCreator.jsx  PollView.jsx  VerificationBadge.jsx  WalletConnectButton.jsx
src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Modal.jsx  Tooltip.jsx
src/context/: PollContext.jsx  WalletContext.jsx
src/hooks/: usePaymentContext.js
src/models/: DeploymentMetadata.js  Poll.js  Vote.js
src/utils/: buildVerification.js
